--- a/index.html
+++ b/index.html
@@ -119,8 +119,6 @@
       </div>
       <form id="login-form" class="space-y-4">
        <div><label for="username" class="block text-sm font-medium mb-2">Username</label> <input type="text" id="username" value="IKK" required class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2" style="border-color: var(--text-secondary); background-color: var(--background);">
-       </div>
-       <div><label for="password" class="block text-sm font-medium mb-2">Password</label> <input type="password" id="password" required class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2" style="border-color: var(--text-secondary); background-color: var(--background);">
        </div><button type="submit" class="w-full py-3 rounded-lg font-bold text-white shadow-lg" style="background-color: var(--primary);"> 🚀 Login </button>
       </form>
      </div>
@@ -192,7 +190,7 @@
      </div>
     </header><!-- Main Content -->
     <main id="main-content" class="hidden max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"><!-- Quick Actions -->
-     <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8"><button id="add-order-btn" class="p-6 rounded-xl shadow-lg font-bold text-white text-lg" style="background-color: var(--primary);"> ➕ Add Order </button> <button id="view-orders-btn" class="p-6 rounded-xl shadow-lg font-bold text-white text-lg" style="background-color: var(--secondary);"> 📋 Order List </button> <button id="analytics-btn" class="p-6 rounded-xl shadow-lg font-bold text-white text-lg bg-purple-500"> 📊 Analytics </button> <button id="email-btn" class="p-6 rounded-xl shadow-lg font-bold text-white text-lg bg-orange-500"> 📧 Send Email </button>
+     <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8"><button id="add-order-btn" class="p-6 rounded-xl shadow-lg font-bold text-white text-lg" style="background-color: var(--primary);">      Add Order </button> <button id="view-orders-btn" class="p-6 rounded-xl shadow-lg font-bold text-white text-lg" style="background-color: var(--secondary);"> 📋 Order List </button> <button id="analytics-btn" class="p-6 rounded-xl shadow-lg font-bold text-white text-lg bg-purple-500"> 📊 Analytics </button> <button id="email-btn" class="p-6 rounded-xl shadow-lg font-bold text-white text-lg bg-orange-500"> 📧 Send Email </button>
      </div><!-- Dashboard Stats -->
      <div id="dashboard" class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
       <div class="p-6 rounded-xl shadow-lg" style="background-color: var(--surface);">
@@ -1398,9 +1396,8 @@
       document.getElementById('login-form').addEventListener('submit', (e) => {
         e.preventDefault();
         const username = document.getElementById('username').value;
-        const password = document.getElementById('password').value;
         
-        if (username === 'IKK' && password === '123') {
+        if (username) {
           currentUser = username;
           document.getElementById('login-screen').classList.add('hidden');
           document.getElementById('main-header').classList.remove('hidden');
@@ -1408,7 +1405,7 @@
           document.getElementById('logged-user').textContent = `Logged in as: ${currentUser}`;
           showToast(`✅ Welcome, ${currentUser}!`);
         } else {
-          showToast('❌ Invalid credentials', 'error');
+          showToast('❌ Please enter username', 'error');
         }
       });
 
@@ -1419,7 +1416,6 @@
         document.getElementById('main-content').classList.add('hidden');
         document.getElementById('login-form').reset();
         document.getElementById('username').value = 'IKK';
-        document.getElementById('password').value = '';
         showToast('👋 Logged out successfully');
       });
 
@@ -1788,7 +1784,7 @@
         link.href = URL.createObjectURL(blob);
         link.download = 'dn_orders_ikk.doc';
         link.click();
-        showToast('     DOC file downloaded!');
+        showToast('       DOC file downloaded!');
       });
 
       document.getElementById('export-jpg-btn').addEventListener('click', async () => {
@@ -2110,5 +2106,5 @@
 
     window.addEventListener('DOMContentLoaded', init);
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b2dd9d7c05506b6',t:'MTc2NjU1NTczOS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b2df73034cf3dce',t:'MTc2NjU1Njk0MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
